--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,26 @@
     <h1>Login</h1>
     <%- include('./partials/messages') %>
     <form action="/users/login" method="POST">
+      <div>
+        <label for="login">Login</label>
+        <input
+          type="text"
+          id="login"
+          name="login"
+          value="<%=typeof login != 'undefined' ? login: '' %>"
+          required
+        />
+      </div>
+      <div>
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          value="<%=typeof password != 'undefined' ? password: '' %>"
+          required
+        />
+      </div>
       <a href="/users/register">register</a>
       <button type="submit">Login</button>
     </form>
